--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "url": "https://github.com/allcracked/calendar-challenge.git"
   },
   "scripts": {
-    "start": "webpack-dev-server --mode development",
-    "watch": "NODE_ENV=development webpack --mode development --config webpack.config.js --watch",
+    "serve": "NODE_ENV=development webpack --mode development --config webpack.config.js && webpack-dev-server --mode development",
+    "dev": "NODE_ENV=development webpack --mode development --config webpack.config.js --watch",
     "build": "NODE_ENV=production webpack --mode production --config webpack.config.js"
   },
   "keywords": [],
   "author": "Jose Avilez",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -22,10 +25,16 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
+    "@teamsupercell/typings-for-css-modules-loader": "^2.1.0",
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
+    "css-loader": "^3.4.2",
     "dotenv-webpack": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.2",
     "webpack": "^4.41.6",
