--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "serve": "NODE_ENV=development webpack --mode development --config webpack.config.js && webpack-dev-server --mode development",
     "dev": "NODE_ENV=development webpack --mode development --config webpack.config.js --watch",
-    "build": "NODE_ENV=production webpack --mode production --config webpack.config.js"
+    "build": "NODE_ENV=production webpack --mode production --config webpack.config.js",
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "keywords": [],
   "author": "Jose Avilez",
@@ -28,11 +29,27 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.1.0",
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
     "css-loader": "^3.4.2",
     "dotenv-webpack": "^1.7.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-import-resolver-webpack": "^0.12.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-json": "^2.1.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.4.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.7",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
+    "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
@@ -40,5 +57,13 @@
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint --cache --fix"
   }
 }
