--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "firebase": "^7.9.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
