--- a/package.json
+++ b/package.json
@@ -17,19 +17,34 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "connected-react-router": "^6.7.0",
     "firebase": "^7.9.1",
+    "history": "^4.10.1",
+    "immutable": "^4.0.0-rc.12",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "seamless-immutable": "^7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "@teamsupercell/typings-for-css-modules-loader": "^2.1.0",
+    "@types/history": "^4.7.5",
+    "@types/node": "^13.7.4",
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/redux-actions": "^2.6.1",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "css-loader": "^3.4.2",
