--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "history": "^4.10.1",
     "immutable": "^4.0.0-rc.12",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
