--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.24.0",
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
@@ -39,7 +40,9 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "@teamsupercell/typings-for-css-modules-loader": "^2.1.0",
+    "@types/bootstrap": "^4.3.1",
     "@types/history": "^4.7.5",
+    "@types/jquery": "^3.3.33",
     "@types/node": "^13.7.4",
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
